# TSADemo

./: CMakeLists.txt  README.md
include/: IMiInputdispatcherstub.h  InputDispatcher.h  MiInputDispatcherStubImpl.h  amutex.h  mutex.h
lib/: InputDispatcher.lib  MiInputDispatcherStubImpl.lib
src/: CMakeLists.txt  main.cpp
src/InputDispatcher/: CMakeLists.txt  InputDispatcher.cpp  MiInputDispatcherStub.cpp  MiInputDispatcherStub.h
src/MiInputDispatcherStubImpl/: CMakeLists.txt  MiInputDispatcherStubImpl.cpp
